--- a/src/components/Home/Hero/style.module.scss
+++ b/src/components/Home/Hero/style.module.scss
@@ -1,5 +1,9 @@
 .main {
     font-family: "Playfair Display", serif  !important;
+    @media screen and (max-width: 480px) {
+        font-size: 56px !important;
+        
+      }
 }
 .sub {
     font-family: "DM Sans", sans-serif !important;
