--- a/src/components/Home/TrendingProducts/style.module.scss
+++ b/src/components/Home/TrendingProducts/style.module.scss
@@ -2,14 +2,14 @@
     font-weight: 700;
     color: '#222222';
     font-family: "DM Sans", sans-serif !important;
-    font-size: 18px;
+    font-size: 18px !important;
     margin-top: 10px;
 }
 
 .btn {
     padding: .8rem;
-    background: black;
-    color: #fff;
+    background: black !important;
+    color: #fff !important;
     font-family: "DM Sans", sans-serif !important;
 }
 
