--- a/src/components/Products/Listing/style.module.scss
+++ b/src/components/Products/Listing/style.module.scss
@@ -57,3 +57,9 @@
     }
      
   }
+.productImg {
+  width: 100% !important;
+  border-top-left-radius: 8 !important;
+  border-top-right-radius: 8 !important;
+  height:350px
+}
