--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,10 @@ h1, h2, h3, h4, h5, h6 {
     background: transparent !important;
     box-shadow: 1px 1px 1px 1px #000;
 }
+#subNav .MuiBreadcrumbs-ol {
+    justify-content: flex-start;
+    @media screen and (max-width: 480px) {
+        justify-content: center !important;
+        
+      }
+}
