--- a/src/components/Products/Listing/style.module.scss
+++ b/src/components/Products/Listing/style.module.scss
@@ -32,6 +32,7 @@
 }
 .appdownload {
     display: flex;
+    font-family: "DM Sans", sans-serif !important;
     justify-content: space-around;
     align-items: center;
     background-color: #222222;
@@ -39,8 +40,8 @@
     flex-direction: column;
     z-index: 100;
     left: 1rem;
-    border-bottom-right-radius: 50%;
-    border-bottom-left-radius: 50%;
+    // border-bottom-right-radius: 50%;
+    // border-bottom-left-radius: 50%;
     box-shadow: 1px 2px 8px 1px #00000070;
     padding: 5px;
     &:focus {
@@ -52,6 +53,7 @@
       color: #fff;
       cursor: pointer;
       &#first-title {
+        font-family: "DM Sans", sans-serif !important;
         font-size: .8rem;
       }  
     }
