fixes products images

--- a/src/components/Common/NavBar/style.module.scss
+++ b/src/components/Common/NavBar/style.module.scss
@@ -4,3 +4,7 @@
 .main {
     font-family: "Playfair Display", serif  !important;
 }
+.logo {
+    font-family: "Playfair Display", serif  !important;
+    cursor: pointer;
+}
