--- a/src/components/Common/NavBar/style.module.scss
+++ b/src/components/Common/NavBar/style.module.scss
@@ -8,3 +8,12 @@
     font-family: "Playfair Display", serif  !important;
     cursor: pointer;
 }
+.viewMore {
+    font-family: "Playfair Display", serif  !important;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color:#D8C29D;
+    font-weight: bold;
+    font-size: .8rem;
+}
