--- a/src/components/Products/Listing/style.module.scss
+++ b/src/components/Products/Listing/style.module.scss
@@ -64,10 +64,12 @@
   width: 100% !important;
   border-top-left-radius: 8 !important;
   border-top-right-radius: 8 !important;
-  height: 210px !important;
+  height: 250px !important;
   // height:270px;
   // aspect-ratio: 1/1;
   margin: auto;
+  scale: 1.1;
+  object-fit: cover;
   
 }
 .imgContainer {
