--- a/src/components/Common/EnquireBtn/style.module.scss
+++ b/src/components/Common/EnquireBtn/style.module.scss
@@ -2,8 +2,9 @@
     margin-top: 1em;
      border-color: black;
      color: #fff;
-     background:black !important
+     background:#E4C38B !important;
+     padding:12px
 }
 .btn:hover {
-    background: #8888;
+    background: #e4b25c;
 }
