--- a/src/components/Products/Listing/style.module.scss
+++ b/src/components/Products/Listing/style.module.scss
@@ -42,10 +42,13 @@
     flex-direction: column;
     z-index: 100;
     left: 1rem;
+    top: 1rem;
     // border-bottom-right-radius: 50%;
     // border-bottom-left-radius: 50%;
     box-shadow: 1px 2px 8px 1px #00000070;
     padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     &:focus {
       outline: none;
     }
@@ -78,11 +81,11 @@
   width: 100% !important;
   border-top-left-radius: 8 !important;
   border-top-right-radius: 8 !important;
-  height: 320px !important;
+  height: 340px !important;
   // height:270px;
   // aspect-ratio: 1/1;
   margin: auto;
-  scale: 1.1;
+  scale: 1.05;
   object-fit: cover; 
 }
 .imgContainer {
