--- a/src/components/Home/Collections/style.css
+++ b/src/components/Home/Collections/style.css
@@ -54,8 +54,9 @@
 }
 
 .grid {
-    background: lightgray;
-    /* min-height: 300px; */
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
     border-radius: 5px;
     padding: 18px
 }
