--- a/src/components/Home/Faq/style.module.scss
+++ b/src/components/Home/Faq/style.module.scss
@@ -1,7 +1,96 @@
-    .main {
-        font-family: "Playfair Display", serif !important;
-    }
-    .sub {
-        font-family: "DM Sans", sans-serif !important;
-        font-weight: bold;
-    }
+@import "../../../styles/variables.scss";
+
+.main {
+    font-family: "Playfair Display", serif !important;
+}
+.sub {
+    font-family: "DM Sans", sans-serif !important;
+    font-weight: bold;
+}
+
+.faqSection {
+  padding: 80px 0;
+  background-color: #f9f6f2;
+  
+  .decorativeLine {
+    width: 40px;
+    height: 2px;
+    background-color: #D8C29D;
+    margin: 0 auto 1rem;
+  }
+
+  .sectionTitle {
+    font-family: $font-family-cormorant;
+    font-size: 2.5rem;
+    color: #222222;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+
+  .sectionSubtitle {
+    font-family: $font-family-nunito;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #D8C29D;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+
+  .sectionDescription {
+    font-family: $font-family-nunito;
+    color: #555;
+    margin-bottom: 3rem;
+    text-align: center;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .faqGrid {
+    margin-top: 2rem;
+  }
+}
+
+.faqAccordion {
+  margin-bottom: 16px !important;
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  border-radius: 8px !important;
+  overflow: hidden;
+  background-color: white;
+  transition: $transition-standard;
+  
+  &:hover {
+    border-color: rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  }
+}
+
+.accordionSummary {
+  padding: 16px 24px;
+  
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.01);
+  }
+}
+
+.questionText {
+  font-weight: 500;
+  color: #222222;
+  font-family: $font-family-cormorant;
+}
+
+.expandIcon {
+  color: #D8C29D;
+}
+
+.accordionDetails {
+  padding: 0px 24px 24px;
+  background-color: white;
+}
+
+.answerText {
+  color: #555;
+  line-height: 1.6;
+  font-family: $font-family-nunito;
+}
