--- a/src/components/Home/Hero/style.module.scss
+++ b/src/components/Home/Hero/style.module.scss
@@ -9,6 +9,36 @@
     font-family: "DM Sans", sans-serif !important;
 }
 
+.videoContainer {
+    position: relative;
+    
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.4); /* Adjust opacity as needed */
+        z-index: 1;
+    }
+    
+    video {
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+    }
+    
+    .contentWrapper {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        z-index: 2;
+    }
+}
+
 .shopNowBtn {
     background-color: rgba(34, 34, 34, 0.85) !important;
     color: #fff !important;
